--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-numpy==2.0.1
-music21==9.1.0
-streamlit==1.38.0
-pytest==8.3.2
-Pillow==10.0.1
-sounddevice==0.4.6
-mido==1.3.1
-tk==0.1.0
+music21==9.9.1
+numpy==2.3.5
+pandas==2.3.3
+Pillow==12.0.0
+sounddevice==0.5.3
