Week 7: Training testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "coverage (>=7.13.0,<8.0.0)"
 ]
