--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,8 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pytest (>=9.0.2,<10.0.0)",
-    "coverage (>=7.13.0,<8.0.0)"
+    "coverage (>=7.13.0,<8.0.0)",
+    "sounddevice (>=0.5.3,<0.6.0)",
+    "numpy (>=2.3.5,<3.0.0)",
+    "pillow (>=12.0.0,<13.0.0)"
 ]
